	* LSS16 file format load/save added to support syslinux bootup splash screens
	* Clipboard alpha is now used as clipboard mask when pasting to image without alpha channel
	* "Resize Canvas" can now be used to offset an image, with or without changing its size
	* TIFF files with alpha saved by Photoshop now load properly
	* Bash-specific idioms in configure script replaced by POSIXy equivalents
	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
	* BUGFIX - Keyboard shortcut for swapping colours A & B now works in GTK+1
	* BUGFIX - Clicking the palette grid in gradient editor now works properly in GTK+1

3.10	2007-1-22

	* Gradient drawing mode added
	* Palette shifting feature added to Palette menu
	* Turkish translation added by Muhammet Kara, Tutku Dalmaz
	* Taiwanese Chinese translation added by Wei-Lun Chao
	* Image tiling mode added to "Resize Canvas"
	* Greyscale effect now respects masking
	* Gamma corrected greyscale effect added
	* Gaussian blur effect replaces the old blur effect
	* Unsharp mask effect added
	* More palette sort modes added
	* Controls for alpha/selection/mask A/B added to "Edit colour A & B"
	* RGB and HSV colour scales generation integrated into palette editor
	* New advanced dithering modes with many configuration options added to "Convert To Indexed" window
	* Optional gamma correction for image scaling, rotation, Gaussian blur and unsharp mask
	* Smudge tool can be configured to ignore opacity mode - right click the tool icon
	* Smudge tool respects tool opacity for RGB images
	* Channel deletion made easier to use
	* View window can now be placed under drawing window using the View menu or 'H' key
	* "Blend A to B" with colour A identical to B now works like GIMP's Color To Alpha filter