@@ -13,6 +13,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* "Resize Canvas" can now be used to offset an image, with or without changing its size
 	* TIFF files with alpha saved by Photoshop now load properly
 	* Bash-specific idioms in configure script replaced by POSIXy equivalents
+	* Zoom combo boxes now are better behaving in GTK+1
 	* BUGFIX - Negative values in "Transform Colour" and "Resize Canvas" dialogs are read correctly again
 	* BUGFIX - Drawing a 2 pixels high filled ellipse doesn't cause crash
 	* BUGFIX - Tool cursor now doesn't revert to default one after showing or hiding view window
